# http-server

./: Cargo.toml  README.md
src/: _crud_example.rs  dog_crud_example.rs  lib.rs  main.rs  mime.rs  request.rs
src/request/: body.rs  http1_1.rs  mod.rs  types.rs
src/request/headers/: content_type.rs
src/request/http1_1/: body.rs  head.rs  mod.rs
src/server/: handlers.rs  listener.rs  mod.rs  request_queue.rs  response.rs
tests/: rest.rs
