[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "http_server"
path = "src/lib.rs"
doc = true

[[bin]]
name = "http_server"
path = "src/main.rs"
doc = false

[dependencies]
env_logger = "0.11.6"
log = "0.4.26"
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"

[dev-dependencies]
http = "1.3.1"
ureq = {version = "3.1.2", features = ["json"]}
